--- a/docs/guides/composer.mdx
+++ b/docs/guides/composer.mdx
@@ -487,7 +487,7 @@ Click a quantum operation below to view its definition.
 
 The NOT gate, also known as the Pauli X gate, flips the $\left|0\right\rangle$ state to $\left|1\right\rangle$, and vice versa. The NOT gate is equivalent to RX for the angle $\pi$ or to ‘HZH’.
 
-| Composer reference                                | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![x\_gate](/docs/images/tutorials/explore-composer/1d52e1a3-ca53-4caa-9700-259e35f0dbaf.avif) | `x q[0];`          | ![image19](/docs/images/tutorials/explore-composer/1392cb96-3d66-4a9e-9ed1-687a937bc3cc.avif)                              | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -497,7 +497,7 @@ The controlled-NOT gate, also known as the controlled-x (CX) gate, acts on a pai
 
 All unitary circuits can be decomposed into single qubit gates and CNOT gates. Because the two-qubit CNOT gate costs much more time to execute on real hardware than single qubit gates, circuit cost is sometimes measured in the number of CNOT gates.
 
-| Composer reference                                | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![CX-Gate](/docs/images/tutorials/explore-composer/e74dca0d-3f6b-42c9-9471-b65fd03ef5b5.avif) | `cx q[0], q[1];`          | ![image19](/docs/images/tutorials/explore-composer/40abd3fa-ab1e-4ea2-ade7-49a06073b37f.avif)                              | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -507,7 +507,7 @@ The Toffoli gate, also known as the double controlled-NOT gate (CCX), has two co
 
 The Toffoli gate with the Hadamard gate is a universal gate set for quantum computing.
 
-| Composer reference                                    | OpenQASM reference      | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                    | OpenQASM reference      | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ----------------------------------------------------- | ----------------------- | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![ccx-gate](/docs/images/tutorials/explore-composer/16a28c9a-fd2c-4e1b-a0d7-27059adc0aa0.avif) | `ccx q[0], q[1], q[2];` | ![ccx\_qsph](/docs/images/tutorials/explore-composer/dc2fb919-f576-4a76-acbe-69dec221145a.avif)                          | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -515,7 +515,7 @@ The Toffoli gate with the Hadamard gate is a universal gate set for quantum comp
 
 The SWAP gate swaps the states of two qubits.
 
-| Composer reference                                  | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                  | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | --------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![SWAP gate](/docs/images/tutorials/explore-composer/61f641e0-fb8f-4a67-af60-9b1bf792f2c6.avif) | `swap q[0], q[1];` | ![swap\_qsph](/docs/images/tutorials/explore-composer/e2090577-7a13-484a-a642-2c56f42119cb.avif)                        | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -533,7 +533,7 @@ The identity gate (sometimes called the Id or the I gate) is actually the absenc
 
 The T gate is equivalent to RZ for the angle $\pi/4$. Fault-tolerant quantum computers will compile all quantum programs down to just the T gate and its inverse, as well as the Clifford gates.
 
-| Composer reference                                | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![t\_gate](/docs/images/tutorials/explore-composer/b5f1b90c-d3b7-4f60-82f9-259dc40cef5b.avif) | `t q[0];`          | ![image29](/docs/images/tutorials/explore-composer/c43496bb-89ff-4518-9afb-d276e400b032.avif)                              | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -541,7 +541,7 @@ The T gate is equivalent to RZ for the angle $\pi/4$. Fault-tolerant quantum com
 
 The S gate applies a phase of $i$ to the $\left|1\right\rangle$ state. It is equivalent to RZ for the angle $\pi/2$. Note that S=P($\pi/2$).
 
-| Composer reference                                | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![s\_gate](/docs/images/tutorials/explore-composer/c3217084-41c0-4821-80fc-b0852a8c2cd4.avif) | `s q[0];`          | ![image25](/docs/images/tutorials/explore-composer/ce2da6b1-c21b-4ec0-be82-984a874f02af.avif)                              | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -549,7 +549,7 @@ The S gate applies a phase of $i$ to the $\left|1\right\rangle$ state. It is equ
 
 The Pauli Z gate acts as identity on the $\left|0\right\rangle$ state and multiplies the sign of the $\left|1\right\rangle$ state by -1. It therefore flips the $\left|+\right\rangle$ and $\left|-\right\rangle$ states. In the +/- basis, it plays the same role as the NOT gate in the $\left|0\right\rangle$/$\left|1\right\rangle$ basis.
 
-| Composer reference                                | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![z\_gate](/docs/images/tutorials/explore-composer/941c8820-65bc-444c-890b-b445b9958085.avif) | `z q[0];`          | ![image23](/docs/images/tutorials/explore-composer/84b92ecb-3b62-4cb3-9c01-549866681816.avif)                              | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -559,7 +559,7 @@ Also known as the Tdg or T-dagger gate.
 
 The inverse of the T gate.
 
-| Composer reference                                | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![T-dagger gate](/docs/images/tutorials/explore-composer/8e348308-7e1f-4e61-a002-ff84d04d89b1.avif) | `tdg q[0];`        | ![image31](/docs/images/tutorials/explore-composer/b79890e8-e6f1-4c22-8546-6322bc6ed57b.avif)                            | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -569,7 +569,7 @@ Also known as the Sdg or S-dagger gate.
 
 The inverse of the S gate.
 
-| Composer reference                                | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![S-dagger gate](/docs/images/tutorials/explore-composer/ae59613c-0c65-447c-869d-81c7ffb8b2ad.avif) | `sdg q[0];`        | ![image27](/docs/images/tutorials/explore-composer/1de10ec2-2026-40f6-8f96-cd332f79780d.avif)                            | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -577,7 +577,7 @@ The inverse of the S gate.
 
 The Phase gate (previously called the U1 gate) applies a phase of $e^{i\theta}$ to the $\left|1\right\rangle$ state. For certain values of $\theta$, it is equivalent to other gates. For example, P($\pi$)=Z, P($\pi$/$2$)=S, and P($\pi/4$)=T. Up to a global phase of $e^{i\theta/2}$, it is equivalent to RZ($\theta$).
 
-| Composer reference                              | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                              | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ----------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![p\_gate](/docs/images/tutorials/explore-composer/2b9eec00-ecbf-45ce-ae09-8e3015dc6c98.avif) | `p(theta) q[0];`   | ![p\_qsph](/docs/images/tutorials/explore-composer/a02007e1-4c68-42af-b10c-49cbbaaed8ef.avif)                             | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -587,7 +587,7 @@ In IBM Quantum Composer, the default value for `theta` is $\pi/2$.
 
 The RZ gate implements $exp(-i\frac{\theta}{2}Z)$. On the Bloch sphere, this gate corresponds to rotating the qubit state around the z axis by the given angle.
 
-| Composer reference                                | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![rz\_gate](/docs/images/tutorials/explore-composer/112f2dec-4fa2-42f5-b51c-2bd2205ebd30.avif) | `rz(angle) q[0];`  | ![image17](/docs/images/tutorials/explore-composer/8d60318b-72f9-4188-a07a-ad4d3e82b4e8.avif)                             | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -637,7 +637,7 @@ To make your quantum program more efficient, the compiler will try to combine ga
 
 The H, or Hadamard, gate rotates the states $\left|0\right\rangle$ and $\left|1\right\rangle$ to $\left|+\right\rangle$ and $\left|-\right\rangle$, respectively. It is useful for making superpositions. If you have a universal gate set on a classical computer and add the Hadamard gate, it becomes a universal gate set on a quantum computer.
 
-| Composer reference                                    | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                    | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ----------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![h-gate](/docs/images/tutorials/explore-composer/fd58c6d3-f0af-4566-bf2b-105ed850c946.avif) | `h q[0];`          | ![image1](/docs/images/tutorials/explore-composer/e797de24-e6de-44cb-9137-bb8931d763df.avif)                               | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -649,7 +649,7 @@ Also known as the square-root NOT gate.
 
 This gate implements the square-root of X, $\sqrt{X}$. Applying this gate twice in a row produces the standard Pauli-X gate (NOT gate). Like the Hadamard gate, $\sqrt{X}$ creates an equal superposition state if the qubit is in the state $|0\rangle$, but with a different relative phase. On some hardwares, it is a native gate that can be implemented with a $\pi/2$ or X90 pulse.
 
-| Composer reference                                | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![sx\_gate](/docs/images/tutorials/explore-composer/67933b13-85f0-45e9-bc31-dcea4684dd6f.avif) | `sx q[0];`         | ![sx\_qsph](/docs/images/tutorials/explore-composer/fd300da1-512c-4193-8e77-b15e5e378d34.avif)                         | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -659,7 +659,7 @@ Also known as the SXdg or square-root NOT-dagger gate.
 
 This is the inverse of the $\sqrt{X}$ gate. Applying it twice in a row produces the Pauli-X gate (NOT gate), since the NOT gate is its own inverse. Like the $\sqrt{X}$ gate, this gate can be used to create an equal superposition state, and it too is natively implemented on some hardwares using an X90 pulse.
 
-| Composer reference                                    | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                    | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ----------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![sxdg\_gate](/docs/images/tutorials/explore-composer/4d5d9638-30af-48c3-a8c9-d506a0041f24.avif) | `sxdg q[0];`       | ![sxdg\_qsph](/docs/images/tutorials/explore-composer/3e258992-baa9-42bb-92b1-6e082eb674c9.avif)                     | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -667,7 +667,7 @@ This is the inverse of the $\sqrt{X}$ gate. Applying it twice in a row produces 
 
 The Pauli Y gate is equivalent to Ry for the angle $\pi$. It is equivalent to applying X and Z, up to a global phase factor.
 
-| Composer reference                                | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![y\_gate](/docs/images/tutorials/explore-composer/14cb9cf2-9460-47ae-98b7-dbd06239522a.avif) | `y q[0];`          | ![image21](/docs/images/tutorials/explore-composer/7bdac8ad-6004-4853-afda-d2cabe66c214.avif)                              | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -675,7 +675,7 @@ The Pauli Y gate is equivalent to Ry for the angle $\pi$. It is equivalent to ap
 
 The RX gate implements $exp(-i\frac{\theta}{2}X)$. On the Bloch sphere, this gate corresponds to rotating the qubit state around the x axis by the given angle.
 
-| Composer reference                                | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![rx\_gate](/docs/images/tutorials/explore-composer/f943edee-7a79-43a1-9e18-87eba141f787.avif) | `rx(angle) q[0];`  | ![image13](/docs/images/tutorials/explore-composer/7640c11d-253a-42b7-a3cd-63a8fa98e446.avif)                             | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -685,7 +685,7 @@ In IBM Quantum Composer, the default value for `angle` is $\pi/2$. Therefore, th
 
 The RY gate implements $exp(-i\frac{\theta}{2}Y)$. On the Bloch sphere, this gate corresponds to rotating the qubit state around the y axis by the given angle and does not introduce complex amplitudes.
 
-| Composer reference                                | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ------------------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![ry\_gate](/docs/images/tutorials/explore-composer/77c50d8c-b2d1-4de8-9657-572ede30e02f.avif) | `ry(angle) q[0];`  | ![image15](/docs/images/tutorials/explore-composer/3c1efa46-e05f-486d-8e6a-df5fd0add674.avif)                             | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -695,7 +695,7 @@ In IBM Quantum Composer, the default value for `angle` is $\pi/2$. Therefore, th
 
 The RXX gate implements $\exp(-i \theta/2 X \otimes X)$. The Mølmer–Sørensen gate, the native gate on ion-trap systems, can be expressed as a sum of RXX gates.
 
-| Composer reference                                 | OpenQASM reference       | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                 | OpenQASM reference       | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | -------------------------------------------------- | ------------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![rxx-gate](/docs/images/tutorials/explore-composer/d4328ec9-dc63-4c5c-b7ac-8ecc7cbcd5b6.avif) | `rxx(angle) q[0], q[1];` | ![rxx\_qsph](/docs/images/tutorials/explore-composer/206828a8-0392-498e-98c2-1c89ece527bb.avif)                          | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -705,7 +705,7 @@ In IBM Quantum Composer, the default value for `angle` is $\pi/2$.
 
 The RZZ gate requires a single parameter: an angle expressed in radians. This gate is symmetric; swapping the two qubits it acts on doesn’t change anything.
 
-| Composer reference                                  | OpenQASM reference       | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                  | OpenQASM reference       | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | --------------------------------------------------- | ------------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![rzz\_gate](/docs/images/tutorials/explore-composer/50bddfba-198c-4d70-b978-d044da32c36e.avif) | `rzz(angle) q[0], q[1];` | ![rzz\_qsph](/docs/images/tutorials/explore-composer/013918f1-8973-499b-8b2b-ee150d628852.avif)                          | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -715,7 +715,7 @@ In IBM Quantum Composer, the default value for `angle` is $\pi/2$.
 
 *(Previously called the U3 gate)* The three parameters allow the construction of any single-qubit gate. Has a duration of one unit of gate time.
 
-| Composer reference                                   | OpenQASM reference         | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                                   | OpenQASM reference         | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ---------------------------------------------------- | -------------------------- | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![u\_gate](/docs/images/tutorials/explore-composer/628ae112-fcf8-4be7-a04b-568c390f7c4d.avif) | `u(theta, phi, lam) q[0];` | ![u3\_qsph](/docs/images/tutorials/explore-composer/3e5212aa-a78c-48d8-b49a-4af362e5b899.avif)                            | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -727,7 +727,7 @@ The simplified Toffoli gate, also referred to as Margolus gate.
 
 The simplified Toffoli gate implements the Toffoli gate up to relative phases. This implementation requires three CX gates, which is the minimal amount possible, as shown in https://arxiv.org/abs/quant-ph/0312225. Note that the simplified Toffoli is not equivalent to the Toffoli, but can be used in places where the Toffoli gate is uncomputed again.
 
-| Composer reference                        | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                        | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ----------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![rccx-gate](/docs/images/tutorials/explore-composer/6cdded97-f988-42c6-81c2-f901fd22f692.avif) | `rccx a, b, c;`    | ![rccx\_qsph](/docs/images/tutorials/explore-composer/e4efe9af-7bfb-4753-93f7-6f3b2933ef78.avif)                        | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
 
@@ -737,6 +737,6 @@ The simplified 3-controlled Toffoli gate.
 
 The simplified Toffoli gate implements the Toffoli gate up to relative phases. Note that the simplified Toffoli is not equivalent to the Toffoli, but can be used in places where the Toffoli gate is uncomputed again.
 
-| Composer reference                        | OpenQASM reference | Q-Sphere | Note about q-sphere representations                                                                                                                                                                                                     |
+| Composer reference                        | OpenQASM reference | Q-sphere | Note about q-sphere representations                                                                                                                                                                                                     |
 | ----------------------------------------- | ------------------ | ---------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | ![rc3x-gate](/docs/images/tutorials/explore-composer/5cebe71b-7864-4ff6-b669-ae2ec7049901.avif) | `rc3x a, b, c, d;` | ![rc3x\_qsph](/docs/images/tutorials/explore-composer/86b6a4bc-36cd-483c-a225-bc1d0b3207b3.avif)                        | The q-sphere representation shows the state after the gate operates on the initial equal superposition state $\frac{1}{\sqrt{2^{n}}}\sum_{i=0}^{2^{n}-1}\vert i\rangle, $ where $n$ is the number of qubits needed to support the gate. |
